--- a/src/common/BUILD
+++ b/src/common/BUILD
@@ -4,11 +4,14 @@ load("//bazel:cpplint.bzl", "cpplint")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
+    name = "structs",
+    hdrs = ["structs.h"],
+)
+
+cc_library(
     name = "blocking_list",
     #    srcs = ["blocking_queue.cc"],
     hdrs = ["blocking_list.h"],
-    deps = [
-    ],
 )
 
 cc_library(
