--- a/src/server/grpc_handler/BUILD
+++ b/src/server/grpc_handler/BUILD
@@ -66,7 +66,8 @@ cc_library(
         "file_handler.h",
         "meta.h",
         "repo_handler.h",
-        "status_handler.h",
+        "server_handler.h",
+        "user_handler.h",
     ],
     copts = COPTS,
     local_defines = LOCAL_DEFINES,
