--- a/conf/base_config.json
+++ b/conf/base_config.json
@@ -6,5 +6,9 @@
     "metric_interval_sec": 3,
     "discard_ratio": 1,
     "grpc_threads": 3,
-    "event_threads": 5
+    "event_threads": 5,
+    "use_https": true,
+    "server_ssl_cert": "./conf/xiamu.com.cert.pem",
+    "server_ssl_key": "./conf/xiamu.com.key.pem",
+    "server_ssl_ca": "./conf/ca.chain.cert.pem"
 }
