--- a/conf/base_config.json
+++ b/conf/base_config.json
@@ -7,7 +7,7 @@
     "discard_ratio": 1,
     "grpc_threads": 3,
     "event_threads": 5,
-    "use_https": true,
+    "use_https": false,
     "server_ssl_cert": "./conf/xiamu.com.cert.pem",
     "server_ssl_key": "./conf/xiamu.com.key.pem",
     "server_ssl_ca": "./conf/ca.chain.cert.pem"
