upload use json success

--- a/src/server/http_handler/BUILD
+++ b/src/server/http_handler/BUILD
@@ -48,6 +48,7 @@ cc_library(
         "//src/util",
         "//src/util:config_manager",
         "//src/util:repo_manager",
+        "//src/util:timer",
         "@multipart-parser",
         "@proxygen",
     ],
