--- a/test_data/util_test/BUILD
+++ b/test_data/util_test/BUILD
@@ -1,3 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-exports_files(glob(["**"]))
+filegroup(
+    name = "util_test",
+    srcs = glob(["**"]),
+)
