--- a/src/tools/BUILD
+++ b/src/tools/BUILD
@@ -6,7 +6,10 @@ package(default_visibility = ["//visibility:public"])
 cpplint()
 
 cc_binary(
-    name = "validate_file",
-    srcs = ["validate_file.cc"],
-    deps = ["//src/util"],
+    name = "pretty_scan_status",
+    srcs = ["pretty_scan_status.cc"],
+    deps = [
+        "//src/util",
+        "//src/util:scan_manager",
+    ],
 )
