sync remote client

--- a/src/server/handler_proxy/BUILD
+++ b/src/server/handler_proxy/BUILD
@@ -72,5 +72,6 @@ cc_library(
         "//src/proto:cc_grpc_service",
         "//src/util",
         "//src/util:repo_manager",
+        "//src/util:sync_manager",
     ],
 )
