fix compile error

--- a/src/tools/BUILD
+++ b/src/tools/BUILD
@@ -1,3 +1,4 @@
+load("@oceandoc//bazel:common.bzl", "GLOBAL_COPTS", "GLOBAL_LINKOPTS", "GLOBAL_LOCAL_DEFINES", "version_info")
 load("//bazel:build.bzl", "cc_test")
 load("//bazel:cpplint.bzl", "cpplint")
 
@@ -5,9 +6,69 @@ package(default_visibility = ["//visibility:public"])
 
 cpplint()
 
+COPTS = GLOBAL_COPTS + select({
+    "@oceandoc//bazel:not_cross_compiling_on_windows": [
+        "/Iexternal/double-conversion",
+        "/Iexternal/folly",
+        "/Iexternal/double-conversion",
+        "/Iexternal/proxygen",
+        "/I$(GENDIR)/external/proxygen",
+        "/I$(GENDIR)/external/fizz",
+        "/Iexternal/libsodium/src/libsodium/include",
+        "/Iexternal/fizz",
+        "/Iexternal/wangle",
+        "/I$(GENDIR)/external/folly",
+    ],
+    "//conditions:default": [
+        "-isystem external/double-conversion",
+        "-isystem external/folly",
+        "-isystem external/double-conversion",
+        "-isystem external/proxygen",
+        "-isystem $(GENDIR)/external/proxygen",
+        "-isystem $(GENDIR)/external/fizz",
+        "-isystem external/libsodium/src/libsodium/include",
+        "-isystem external/fizz",
+        "-isystem external/wangle",
+        "-isystem $(GENDIR)/external/folly",
+    ],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
+LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
+    "@oceandoc//bazel:not_cross_compiling_on_windows": [
+        "GLOG_NO_ABBREVIATED_SEVERITIES",
+    ],
+    "//conditions:default": ["BUILD_TRACING=0"],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
+LINKOPTS = GLOBAL_LINKOPTS + select({
+    "@oceandoc//bazel:not_cross_compiling_on_windows": [],
+    "//conditions:default": [],
+}) + select({
+    "@platforms//os:linux": [],
+    "@platforms//os:osx": [],
+    "@platforms//os:windows": [],
+    "//conditions:default": [],
+})
+
 cc_binary(
     name = "scan_status_prettier",
     srcs = ["scan_status_prettier.cc"],
+    copts = COPTS + [
+        "-Wno-implicit-fallthrough",
+        "-Wno-unused-parameter",
+    ],
+    linkopts = LINKOPTS,
+    local_defines = LOCAL_DEFINES,
     deps = [
         "//src/util",
         "//src/util:scan_manager",
@@ -17,6 +78,12 @@ cc_binary(
 cc_binary(
     name = "scan_status_validator",
     srcs = ["scan_status_validator.cc"],
+    copts = COPTS + [
+        "-Wno-implicit-fallthrough",
+        "-Wno-unused-parameter",
+    ],
+    linkopts = LINKOPTS,
+    local_defines = LOCAL_DEFINES,
     deps = [
         "//src/util",
         "//src/util:scan_manager",
@@ -26,6 +93,12 @@ cc_binary(
 cc_binary(
     name = "scan",
     srcs = ["scan.cc"],
+    copts = COPTS + [
+        "-Wno-implicit-fallthrough",
+        "-Wno-unused-parameter",
+    ],
+    linkopts = LINKOPTS,
+    local_defines = LOCAL_DEFINES,
     deps = [
         "//src/util",
         "//src/util:scan_manager",
