--- a/src/client/grpc_client/BUILD
+++ b/src/client/grpc_client/BUILD
@@ -78,3 +78,12 @@ cc_library(
         "@openssl//:ssl",
     ],
 )
+
+cc_test(
+    name = "grpc_file_client_test",
+    srcs = ["grpc_file_client_test.cc"],
+    copts = COPTS,
+    data = ["//conf:base_config.json"],
+    local_defines = LOCAL_DEFINES,
+    deps = [":grpc_clients"],
+)
