recursive local sync

--- a/src/server/handler_proxy/BUILD
+++ b/src/server/handler_proxy/BUILD
@@ -71,6 +71,7 @@ cc_library(
         "//src/async_grpc",
         "//src/proto:cc_grpc_service",
         "//src/util",
+        "//src/util:receive_queue_manager",
         "//src/util:repo_manager",
         "//src/util:sync_manager",
     ],
