--- a/src/server/handler_proxy/BUILD
+++ b/src/server/handler_proxy/BUILD
@@ -69,10 +69,10 @@ cc_library(
     local_defines = LOCAL_DEFINES,
     deps = [
         "//src/async_grpc",
+        "//src/impl:receive_queue_manager",
+        "//src/impl:repo_manager",
+        "//src/impl:sync_manager",
         "//src/proto:cc_grpc_service",
         "//src/util",
-        "//src/util:receive_queue_manager",
-        "//src/util:repo_manager",
-        "//src/util:sync_manager",
     ],
 )
