user and session manager

--- a/.bazel_downloader.cfg
+++ b/.bazel_downloader.cfg
@@ -4,6 +4,7 @@ rewrite ftp.gnu.org/(.*)/(.*) code.xiamu.com/files/$2
 rewrite gitlab.com/(.*)/(.*) code.xiamu.com/files/$2
 rewrite dist.schmorp.de/(.*)/(.*) code.xiamu.com/files/$2
 rewrite cdn.azul.com/(.*)/(.*) code.xiamu.com/files/$2
+rewrite sqlite.org/(.*)/(.*) code.xiamu.com/files/$2
 
 #allow mirror.bazel.build
 #allow github.com
