--- a/src/server/handler_proxy/BUILD
+++ b/src/server/handler_proxy/BUILD
@@ -71,7 +71,9 @@ cc_library(
         "//src/async_grpc",
         "//src/impl:receive_queue_manager",
         "//src/impl:repo_manager",
+        "//src/impl:session_manager",
         "//src/impl:sync_manager",
+        "//src/impl:user_manager",
         "//src/proto:cc_grpc_service",
         "//src/util",
     ],
