--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -31,11 +31,6 @@ config_setting(
 )
 
 config_setting(
-    name = "arch",
-    define_values = {"distro": "arch"},
-)
-
-config_setting(
     name = "debian",
     define_values = {"distro": "debian"},
 )
@@ -51,182 +46,93 @@ config_setting(
         "@platforms//os:windows",
         "@platforms//cpu:x86_64",
     ],
-    visibility = ["//visibility:public"],
+)
+
+config_setting(
+    name = "windows_aarch64",
+    constraint_values = [
+        "@platforms//os:windows",
+        "@platforms//cpu:aarch64",
+    ],
 )
 
 config_setting(
     name = "linux_x86_64",
     constraint_values = [
-        "@platforms//cpu:x86_64",
         "@platforms//os:linux",
+        "@platforms//cpu:x86_64",
     ],
 )
 
 config_setting(
     name = "linux_aarch64",
     constraint_values = [
-        "@platforms//cpu:aarch64",
         "@platforms//os:linux",
+        "@platforms//cpu:aarch64",
     ],
 )
 
 config_setting(
     name = "osx_x86_64",
     constraint_values = [
-        "@platforms//cpu:x86_64",
         "@platforms//os:osx",
+        "@platforms//cpu:x86_64",
     ],
 )
 
 config_setting(
     name = "osx_aarch64",
     constraint_values = [
+        "@platforms//os:osx",
         "@platforms//cpu:aarch64",
-        "@platforms//os:osx",
-    ],
-)
-
-selects.config_setting_group(
-    name = "osx_gcc",
-    match_all = [
-        "@platforms//os:osx",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "osx_clang",
-    match_all = [
-        "@platforms//os:osx",
-        ":clang",
-    ],
-)
-
-selects.config_setting_group(
-    name = "windows_x86_64_gcc",
-    match_all = [
-        ":windows_x86_64",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "windows_x86_64_clang",
-    match_all = [
-        ":windows_x86_64",
-        ":clang",
-    ],
-)
-
-selects.config_setting_group(
-    name = "windows_x86_64_msvc",
-    match_all = [
-        ":windows_x86_64",
-        ":msvc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "linux_x86_64_gcc",
-    match_all = [
-        ":linux_x86_64",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "linux_x86_64_clang",
-    match_all = [
-        ":linux_x86_64",
-        ":clang",
-    ],
-)
-
-selects.config_setting_group(
-    name = "linux_aarch64_gcc",
-    match_all = [
-        ":linux_aarch64",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "linux_aarch64_clang",
-    match_all = [
-        ":linux_aarch64",
-        ":clang",
-    ],
-)
-
-selects.config_setting_group(
-    name = "osx_x86_64_gcc",
-    match_all = [
-        ":osx_x86_64",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "osx_x86_64_clang",
-    match_all = [
-        ":osx_x86_64",
-        ":clang",
-    ],
-)
-
-selects.config_setting_group(
-    name = "osx_aarch64_gcc",
-    match_all = [
-        ":osx_aarch64",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "osx_aarch64_clang",
-    match_all = [
-        ":osx_aarch64",
-        ":clang",
     ],
 )
 
 platform(
     name = "windows_x86_64_platform",
     constraint_values = [
-        "@platforms//cpu:x86_64",
         "@platforms//os:windows",
+        "@platforms//cpu:x86_64",
+    ],
+)
+
+platform(
+    name = "windows_aarch64_platform",
+    constraint_values = [
+        "@platforms//os:windows",
+        "@platforms//cpu:aarch64",
     ],
 )
 
 platform(
     name = "linux_x86_64_platform",
     constraint_values = [
-        "@platforms//cpu:x86_64",
         "@platforms//os:linux",
+        "@platforms//cpu:x86_64",
     ],
 )
 
 platform(
     name = "linux_aarch64_platform",
     constraint_values = [
-        "@platforms//cpu:aarch64",
         "@platforms//os:linux",
+        "@platforms//cpu:aarch64",
     ],
 )
 
 platform(
     name = "osx_x86_64_platform",
     constraint_values = [
-        "@platforms//cpu:x86_64",
         "@platforms//os:osx",
+        "@platforms//cpu:x86_64",
     ],
 )
 
 platform(
     name = "osx_aarch64_platform",
     constraint_values = [
-        "@platforms//cpu:aarch64",
         "@platforms//os:osx",
+        "@platforms//cpu:aarch64",
     ],
 )
 
@@ -238,74 +144,4 @@ config_setting(
 config_setting(
     name = "tcmalloc",
     define_values = {"profiling_type": "tcmalloc"},
-)
-
-config_setting(
-    name = "cross_compiling",
-    define_values = {"cross_compiling": "true"},
-)
-
-config_setting(
-    name = "not_cross_compiling",
-    define_values = {"cross_compiling": "false"},
-)
-
-selects.config_setting_group(
-    name = "cross_compiling_for_osx_gcc",
-    match_all = [
-        ":cross_compiling",
-        "@platforms//os:osx",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "cross_compiling_for_osx_clang",
-    match_all = [
-        ":cross_compiling",
-        "@platforms//os:osx",
-        ":clang",
-    ],
-)
-
-selects.config_setting_group(
-    name = "cross_compiling_for_osx",
-    match_all = [
-        ":cross_compiling",
-        "@platforms//os:osx",
-    ],
-)
-
-selects.config_setting_group(
-    name = "not_cross_compiling_on_osx",
-    match_all = [
-        ":not_cross_compiling",
-        "@platforms//os:osx",
-    ],
-)
-
-selects.config_setting_group(
-    name = "cross_compiling_for_windows_gcc",
-    match_all = [
-        ":cross_compiling",
-        "@platforms//os:windows",
-        ":gcc",
-    ],
-)
-
-selects.config_setting_group(
-    name = "cross_compiling_for_windows",
-    match_all = [
-        ":cross_compiling",
-        "@platforms//os:windows",
-    ],
-)
-
-selects.config_setting_group(
-    name = "not_cross_compiling_on_windows",
-    match_all = [
-        ":not_cross_compiling",
-        "@platforms//os:windows",
-        ":msvc",
-    ],
 )
