--- a/src/impl/BUILD
+++ b/src/impl/BUILD
@@ -4,8 +4,10 @@ load("//bazel:cpplint.bzl", "cpplint")
 
 package(default_visibility = ["//visibility:public"])
 
+cpplint()
+
 COPTS = GLOBAL_COPTS + select({
-    "@oceandoc//bazel:not_cross_compiling_on_windows": [
+    "@platforms//os:windows": [
         "/Iexternal/double-conversion",
         "/Iexternal/folly",
         "/Iexternal/libsodium/src/libsodium/include",
@@ -25,7 +27,7 @@ COPTS = GLOBAL_COPTS + select({
 })
 
 LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
-    "@oceandoc//bazel:not_cross_compiling_on_windows": [
+    "@platforms//os:windows": [
         "GLOG_NO_ABBREVIATED_SEVERITIES",
     ],
     "//conditions:default": ["BUILD_TRACING=0"],
@@ -35,8 +37,6 @@ LOCAL_DEFINES = GLOBAL_LOCAL_DEFINES + select({
     "@platforms//os:windows": [],
     "//conditions:default": [],
 })
-
-cpplint()
 
 cc_library(
     name = "repo_manager",
