--- a/.bazelrc
+++ b/.bazelrc
@@ -181,29 +181,31 @@ build:gcc_aarch64_linux_musl --host_copt='-g'
 build:gcc_aarch64_linux_musl --define cross_compiling=true
 build:gcc_aarch64_linux_musl --build_tag_filters='-ignore'
 
-build:clang_linux_x86_64 --platforms='//bazel:linux_x86_64_platform'
-build:clang_linux_x86_64 --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type'
-build:clang_linux_x86_64 --extra_toolchains='@cc_toolchain_config_x86_64_linux_generic_glibc_clang//:toolchain-x86_64_linux_generic_glibc_clang'
-build:clang_linux_x86_64 --extra_toolchains='@remotejdk21_linux_toolchain_config_repo//:toolchain'
-build:clang_linux_x86_64 --cpu='x86_64'
-build:clang_linux_x86_64 --compiler='clang'
-build:clang_linux_x86_64 --copt='-g'
-build:clang_linux_x86_64 --host_copt='-g'
+build:clang_x86_64_linux_gnu --platforms='//bazel:linux_x86_64_platform'
+build:clang_x86_64_linux_gnu --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type'
+build:clang_x86_64_linux_gnu --extra_toolchains='@cc_toolchain_config_clang_x86_64_unknown_linux_gnu//:toolchain-clang_x86_64_unknown_linux_gnu'
+build:clang_x86_64_linux_gnu --extra_toolchains='@remotejdk21_linux_toolchain_config_repo//:toolchain'
+build:clang_x86_64_linux_gnu --cpu='x86_64'
+build:clang_x86_64_linux_gnu --compiler='clang'
+build:clang_x86_64_linux_gnu --copt='-g'
+build:clang_x86_64_linux_gnu --host_copt='-g'
 
-build:clang_linux_aarch64 --platforms='//bazel:linux_aarch64_platform'
-build:clang_linux_aarch64 --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type'
-build:clang_linux_aarch64 --extra_toolchains='@cc_toolchain_config_aarch64_linux_generic_glibc_clang//:toolchain-aarch64_linux_generic_glibc_clang'
-build:clang_linux_aarch64 --extra_toolchains='@remotejdk21_linux_aarch64_toolchain_config_repo//:toolchain'
-build:clang_linux_aarch64 --cpu='aarch64'
-build:clang_linux_aarch64 --compiler=clang
-build:clang_linux_aarch64 --copt='-g'
-build:clang_linux_aarch64 --host_copt='-g'
-build:clang_linux_aarch64 --define cross_compiling=true
-build:clang_linux_aarch64 --build_tag_filters='-ignore'
+build:clang_aarch64_linux_gnu --platforms='//bazel:linux_aarch64_platform'
+build:clang_aarch64_linux_gnu --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type'
+build:clang_aarch64_linux_gnu --extra_toolchains='@cc_toolchain_config_clang_aarch64_unknown_linux_gnu//:toolchain-clang_aarch64_unknown_linux_gnu'
+build:clang_aarch64_linux_gnu --extra_toolchains='@remotejdk21_linux_aarch64_toolchain_config_repo//:toolchain'
+build:clang_aarch64_linux_gnu --cpu='aarch64'
+build:clang_aarch64_linux_gnu --compiler=clang
+build:clang_aarch64_linux_gnu --copt='-g'
+build:clang_aarch64_linux_gnu --host_copt='-g'
+build:clang_aarch64_linux_gnu --define cross_compiling=true
+build:clang_aarch64_linux_gnu --build_tag_filters='-ignore'
+
+#use clang to support musl need compile libc++.so and libc++abi.so and libunwind.so use musl
 
 build:clang_macosx_x86_64 --platforms='//bazel:osx_x86_64_platform'
 build:clang_macosx_x86_64 --toolchain_resolution_debug='@bazel_tools//tools/jdk:runtime_toolchain_type'
-build:clang_macosx_x86_64 --extra_toolchains='@cc_toolchain_config_x86_64_osx_generic_macosx_clang//:toolchain-x86_64_osx_generic_macosx_clang'
+build:clang_macosx_x86_64 --extra_toolchains='@cc_toolchain_config_clang_x86_64_unknown_osx_macosx//:toolchain-clang_x86_64_unknown_osx_macosx'
 build:clang_macosx_x86_64 --extra_toolchains='@remotejdk21_linux_toolchain_config_repo//:toolchain'
 build:clang_macosx_x86_64 --cpu='x86_64'
 build:clang_macosx_x86_64 --compiler='clang'
